# shitposter4

./: .coveragerc  CONTRIBUTING.rst  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
ffi/auto/: package.json
ffi/backend/: Cargo.toml
ffi/backend/src/: main.rs
ffi/webui/: package.json  tailwind.config.ts
ffi/webui/src/app/: globals.css  layout.tsx  page.tsx
ffi/webui/src/app/api/action/: route.ts
ffi/webui/src/app/api/init/: route.ts
ffi/webui/src/app/api/status/: route.ts
ffi/webui/src/components/: AutomationPanel.tsx
ffi/webui/src/types/: automation.ts
src/shitposter4/: desktop_automation.py  skeleton.py
tests/: conftest.py  test_skeleton.py
